--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -48,35 +48,38 @@
 				<div class="ui horizontal link list">
 					<div class="item">
 						<img src="https://unsplash.it/100/100?image=1005" alt=""
+							th:src="@{${blog.user.avatar}}"
 							class="ui avatar image">
 						<div class="content">
-							<a href="#" class="header">李仁密</a>
+							<a href="#" class="header" th:text="${blog.user.nickname}">李仁密</a>
 						</div>
 					</div>
 					<div class="item">
-						<i class="calendar icon"></i> 2017-10-01
+						<i class="calendar icon"></i><span th:text="${#dates.format(blog.updateTime, 'yyyy-MM-dd')}">2021-11-11</span>
 					</div>
 					<div class="item">
-						<i class="eye icon"></i> 2342
+						<i class="eye icon"></i><span th:text="${blog.views}">2345</span>
 					</div>
 				</div>
 			</div>
 			<div class="ui attached segment">
 				<!--图片区域-->
 				<img src="https://unsplash.it/800/450?image=1005" alt=""
+					th:src="@{${blog.firstPicture}}"
 					class="ui fluid rounded image">
 			</div>
 			<div class="ui  attached padded segment">
 				<!--内容-->
 				<div class="ui right aligned basic segment">
-					<div class="ui orange basic label">原创</div>
+					<div class="ui orange basic label" th:text="${blog.flag}">原创</div>
 				</div>
 
-				<h2 class="ui center aligned header">关于刻意练习的清单</h2>
+				<h2 class="ui center aligned header" th:text="${blog.title}">关于刻意练习的清单</h2>
 				<br>
 
 				<div id="content"
-					class="typo  typo-selection js-toc-content m-padding-lr-responsive m-padding-tb-large">
+					class="typo  typo-selection js-toc-content m-padding-lr-responsive m-padding-tb-large"
+					th:utext="${blog.content}">
 
 					<h2 id="section1">
 						一、关于 <i class="serif">Typo.css</i>
@@ -517,7 +520,7 @@ h5,h6{font-size:1em;}
 
 				<!--标签-->
 				<div class="m-padding-lr-responsive">
-					<div class="ui basic teal left pointing label">方法论</div>
+					<div class="ui basic teal left pointing label" th:each="tag : ${blog.tags}" th:text="${tag.name}">方法论</div>
 				</div>
 
 				<!--赞赏-->
@@ -528,12 +531,12 @@ h5,h6{font-size:1em;}
 					<div class="ui orange basic label">
 						<div class="ui images" style="font-size: inherit !important;">
 							<div class="image">
-								<img src="../static/images/wechat.jpg" alt=""
+								<img src="../static/images/wechat.jpg" alt="" th:src="@{/images/wechat.jpg}"
 									class="ui rounded bordered image" style="width: 120px">
 								<div>支付宝</div>
 							</div>
 							<div class="image">
-								<img src="../static/images/wechat.jpg" alt=""
+								<img src="../static/images/wechat.jpg" alt="" th:src="@{/images/wechat.jpg}"
 									class="ui rounded bordered image" style="width: 120px">
 								<div>微信</div>
 							</div>
@@ -547,14 +550,14 @@ h5,h6{font-size:1em;}
 				<div class="ui middle aligned grid">
 					<div class="eleven wide column">
 						<ui class="list">
-						<li>作者：李仁密（联系作者）</li>
-						<li>发表时间：2017-10-02 09:08</li>
+						<li>作者：<span th:text="${blog.user.nickname}">李仁密</span><a href="#" target="_blank" th:href="@{/about}">（联系作者）</a></li>
+						<li>发表时间：<span th:text="${#dates.format(blog.updateTime, 'yyyy-MM-dd HH:mm')}">2017-10-02 09:08</span></li>
 						<li>版权声明：自由转载-非商用-非衍生-保持署名（创意共享3.0许可证）</li>
 						<li>公众号转载：请在文末添加作者公众号二维码</li>
 						</ui>
 					</div>
 					<div class="five wide column">
-						<img src="../static/images/wechat.jpg" alt=""
+						<img src="../static/images/wechat.jpg" alt="" th:src="@{/images/wechat.jpg}"
 							class="ui right floated rounded bordered image"
 							style="width: 110px">
 					</div>
@@ -748,7 +751,7 @@ h5,h6{font-size:1em;}
 
 
 
-	<script>
+	<script th:inline="javascript">
 		$('.menu.toggle').click(function() {
 			$('.m-item').toggleClass('m-mobile-hide');
 		});
@@ -778,9 +781,12 @@ h5,h6{font-size:1em;}
 			popup : $('.wechat-qr'),
 			position : 'left center'
 		});
+		
+		var serverurl = "127.0.0.1:8080"
+		var url = /*[[@{/blog/{id}(id=$(blog.id))}]]*/"";
 
 		var qrcode = new QRCode("qrcode", {
-			text : "http://jindo.dev.naver.com/collie",
+			text : serverurl+url,
 			width : 110,
 			height : 110,
 			colorDark : "#000000",
