--- a/src/main/resources/templates/types.html
+++ b/src/main/resources/templates/types.html
@@ -52,240 +52,147 @@
 					</div>
 					<div class="right aligned column">
 						共
-						<h2 class="ui orange header m-inline-block m-text-thin">14</h2>
+						<h2 class="ui orange header m-inline-block m-text-thin"
+							th:text="${#arrays.length(types)}">14</h2>
 						个
 					</div>
 				</div>
 			</div>
 
 			<div class="ui attached segment m-padding-tb-large">
-				<div class="ui labeled button m-margin-tb-tiny">
-					<a href="#" class="ui basic teal button">思考与感悟</a>
-					<div class="ui basic teal left pointing label">24</div>
-				</div>
-				<div class="ui labeled button m-margin-tb-tiny">
-					<a href="#" class="ui basic button">开发者手册</a>
-					<div class="ui basic left pointing label">24</div>
-				</div>
-				<div class="ui labeled button m-margin-tb-tiny">
-					<a href="#" class="ui basic teal button">思考与感悟</a>
-					<div class="ui basic teal left pointing label">24</div>
-				</div>
-				<div class="ui labeled button m-margin-tb-tiny">
-					<a href="#" class="ui basic button">开发者手册</a>
-					<div class="ui basic left pointing label">24</div>
-				</div>
-				<div class="ui labeled button m-margin-tb-tiny">
-					<a href="#" class="ui basic teal button">思考与感悟</a>
-					<div class="ui basic teal left pointing label">24</div>
-				</div>
-				<div class="ui labeled button m-margin-tb-tiny">
-					<a href="#" class="ui basic button">开发者手册</a>
-					<div class="ui basic left pointing label">24</div>
-				</div>
-				<div class="ui labeled button m-margin-tb-tiny">
-					<a href="#" class="ui basic teal button">思考与感悟</a>
-					<div class="ui basic teal left pointing label">24</div>
-				</div>
-				<div class="ui labeled button m-margin-tb-tiny">
-					<a href="#" class="ui basic button">开发者手册</a>
-					<div class="ui basic left pointing label">24</div>
+				<div class="ui labeled button m-margin-tb-tiny"
+					th:each="type : ${types}">
+					<a href="#" th:href="@{/types/{id}(id=${type.id})}"
+						class="ui basic button"
+						th:classappend="${type.id==activeTypeId} ? 'teal'"
+						th:text="${type.name}">思考与感悟</a>
+					<div class="ui basic left pointing label"
+						th:classappend="${type.id==activeTypeId} ? 'teal'"
+						th:text="${#arrays.length(type.blogs)}">24</div>
 				</div>
 			</div>
 
 			<div class="ui teal top attached segment">
-				<div
-					class="ui padded vertical segment m-padding-tb-large m-mobile-lr-clear">
-					<div class="ui mobile reversed stackable grid">
+				<div class="ui padded vertical segment m-padding-tb-large"
+					th:each="blog : ${page.content}">
+					<div class="ui middle aligend mobile reversed stackable grid">
 						<div class="eleven wide column">
-							<h3 class="ui header">你真的理解什么是财富自由吗？</h3>
-							<p class="m-text">正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已......</p>
+							<h3 class="ui header">
+								<a href="#" th:href="@{/blog/{id}(id=${blog.id})}"
+									target="_blank" class="m-black" th:text="${blog.title}">你真的理解什么是财富自由吗？</a>
+							</h3>
+							<p class="m-text" th:text="|${blog.description}......|">正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已......</p>
 							<div class="ui stackable grid">
 								<div class="eleven wide column">
 									<div class="ui mini horizontal link list">
 										<div class="item">
-											<img src="https://unsplash.it/100/100?image=1005" alt=""
+											<img src="https://unsplash.it/100/100?image=1005"
+												th:src="@{${blog.user.avatar}}" alt=""
 												class="ui avatar image">
 											<div class="content">
-												<a href="#" class="header">厘米人</a>
+												<a href="#" class="header" th:text="${blog.user.nickname}">厘米人</a>
 											</div>
 										</div>
 										<div class="item">
-											<i class="calendar icon"></i> 2021-11-11
+											<i class="calendar icon"></i><span
+												th:text="${#dates.format(blog.updateTime, 'yyyy-MM-dd')}">2021-11-11</span>
 										</div>
 										<div class="item">
-											<i class="eye icon"></i> 2345
+											<i class="eye icon"></i><span th:text="${blog.views}">2345</span>
 										</div>
 									</div>
 								</div>
 								<div class="right aligned five wide column">
 									<a href="#" target="_blank"
-										class="ui teal basic label m-padding-tiny m-text-thin">认知升级</a>
+										class="ui teal basic label m-padding-tiny m-text-thin"
+										th:text="${blog.type.name}">认知升级</a>
 								</div>
 							</div>
 						</div>
 
 						<div class="five wide column">
-							<a href="#" target="_blank"> <img
-								src="https://unsplash.it/800/450?image=1005" alt=""
-								class="ui rounded image">
+							<a href="#" th:href="@{/blog/{id}(id=${blog.id})}"
+								target="_blank"> <img
+								src="https://unsplash.it/800/450?image=1005"
+								th:src="@{${blog.firstPicture}}" alt="" class="ui rounded image">
 							</a>
 						</div>
 					</div>
 				</div>
-
-				<div
-					class="ui padded vertical segment m-padding-tb-large m-mobile-lr-clear">
-					<div class="ui mobile reversed stackable grid">
-						<div class="eleven wide column">
-							<h3 class="ui header">你真的理解什么是财富自由吗？</h3>
-							<p class="m-text">正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已......</p>
-							<div class="ui stackable grid">
-								<div class="eleven wide column">
-									<div class="ui mini horizontal link list">
-										<div class="item">
-											<img src="https://unsplash.it/100/100?image=1005" alt=""
-												class="ui avatar image">
-											<div class="content">
-												<a href="#" class="header">厘米人</a>
-											</div>
-										</div>
-										<div class="item">
-											<i class="calendar icon"></i> 2021-11-11
-										</div>
-										<div class="item">
-											<i class="eye icon"></i> 2345
-										</div>
-									</div>
-								</div>
-								<div class="right aligned five wide column">
-									<a href="#" target="_blank"
-										class="ui teal basic label m-padding-tiny m-text-thin">认知升级</a>
-								</div>
-							</div>
+				<!-- footer -->
+				<div class="ui bottom attached segment"
+					th:if="${page.totalPages} > 1">
+					<div class="ui middle two column grid">
+						<div class="column">
+							<a href="#" class="ui mini teal basic button"
+								th:href="@{/(page=${page.number-1})}" th:unless="${page.first}">上一页</a>
 						</div>
-
-						<div class="five wide column">
-							<a href="#" target="_blank"> <img
-								src="https://unsplash.it/800/450?image=1005" alt=""
-								class="ui rounded image">
-							</a>
+						<div class="right aligned column">
+							<a href="#" class="ui mini teal basic button"
+								th:href="@{/(page=${page.number+1})}" th:unless="${page.last}">下一页</a>
 						</div>
-					</div>
-				</div>
-
-				<div
-					class="ui padded vertical segment m-padding-tb-large m-mobile-lr-clear">
-					<div class="ui mobile reversed stackable grid">
-						<div class="eleven wide column">
-							<h3 class="ui header">你真的理解什么是财富自由吗？</h3>
-							<p class="m-text">正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已......</p>
-							<div class="ui stackable grid">
-								<div class="eleven wide column">
-									<div class="ui mini horizontal link list">
-										<div class="item">
-											<img src="https://unsplash.it/100/100?image=1005" alt=""
-												class="ui avatar image">
-											<div class="content">
-												<a href="#" class="header">厘米人</a>
-											</div>
-										</div>
-										<div class="item">
-											<i class="calendar icon"></i> 2021-11-11
-										</div>
-										<div class="item">
-											<i class="eye icon"></i> 2345
-										</div>
-									</div>
-								</div>
-								<div class="right aligned five wide column">
-									<a href="#" target="_blank"
-										class="ui teal basic label m-padding-tiny m-text-thin">认知升级</a>
-								</div>
-							</div>
-						</div>
-
-						<div class="five wide column">
-							<a href="#" target="_blank"> <img
-								src="https://unsplash.it/800/450?image=1005" alt=""
-								class="ui rounded image">
-							</a>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<!-- footer -->
-			<div class="ui bottom attached segment">
-				<div class="ui middle two column grid">
-					<div class="column">
-						<a href="#" class="ui mini teal basic button">上一页</a>
-					</div>
-					<div class="right aligned column">
-						<a href="#" class="ui mini teal basic button">下一页</a>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 
 
-	<!-- 底部footer -->
-	<footer th:replace="_fragments :: footer"
-		class="ui inverted vertical segment m-padding-tb-massive">
-		<div class="ui center aligned container">
-			<div class="ui inverted divided stackable grid">
-				<div class="three wide column">
-					<div class="ui inverted link list">
-						<div class="item">
-							<img src="../static/images/wechat.jpg"
-								th:src="@{'/images/wechat.jpg'}" class="ui rounded image" alt=""
-								style="width: 110px;">
+		<!-- 底部footer -->
+		<footer th:replace="_fragments :: footer"
+			class="ui inverted vertical segment m-padding-tb-massive">
+			<div class="ui center aligned container">
+				<div class="ui inverted divided stackable grid">
+					<div class="three wide column">
+						<div class="ui inverted link list">
+							<div class="item">
+								<img src="../static/images/wechat.jpg"
+									th:src="@{'/images/wechat.jpg'}" class="ui rounded image"
+									alt="" style="width: 110px;">
+							</div>
+						</div>
+					</div>
+					<div class="three wide column">
+						<h4 class="ui inverted header m-text-thin m-text-spaced">最新博客</h4>
+						<div class="ui inverted link list">
+							<a href="#" class="item">用户故事(User Story)</a> <a href="#"
+								class="item">用户故事(User Story)</a> <a href="#" class="item">用户故事(User
+								Story)</a>
+						</div>
+					</div>
+					<div class="three wide column">
+						<h4 class="ui inverted header m-text-thin m-text-spaced">联系我</h4>
+						<div class="ui inverted link list">
+							<a href="#" class="item">Email: lirenmi@163.com</a> <a href="#"
+								class="item">QQ: 865729312</a>
+						</div>
+					</div>
+					<div class="seven wide column">
+						<h4 class="ui inverted header m-text-thin m-text-spaced">Blog</h4>
+						<div class="ui inverted link list">
+							<p class="m-text-thin m-text-spaced m-opacity-mini">jsDelivr
+								is a free CDN for open source files. We are tightly integrated
+								with Github and npm allowing us to automatically provide a
+								reliable CDN service to almost every open source project out
+								there.</p>
 						</div>
 					</div>
 				</div>
-				<div class="three wide column">
-					<h4 class="ui inverted header m-text-thin m-text-spaced">最新博客</h4>
-					<div class="ui inverted link list">
-						<a href="#" class="item">用户故事(User Story)</a> <a href="#"
-							class="item">用户故事(User Story)</a> <a href="#" class="item">用户故事(User
-							Story)</a>
-					</div>
-				</div>
-				<div class="three wide column">
-					<h4 class="ui inverted header m-text-thin m-text-spaced">联系我</h4>
-					<div class="ui inverted link list">
-						<a href="#" class="item">Email: lirenmi@163.com</a> <a href="#"
-							class="item">QQ: 865729312</a>
-					</div>
-				</div>
-				<div class="seven wide column">
-					<h4 class="ui inverted header m-text-thin m-text-spaced">Blog</h4>
-					<div class="ui inverted link list">
-						<p class="m-text-thin m-text-spaced m-opacity-mini">jsDelivr
-							is a free CDN for open source files. We are tightly integrated
-							with Github and npm allowing us to automatically provide a
-							reliable CDN service to almost every open source project out
-							there.</p>
-					</div>
-				</div>
+				<div class="ui inverted section divider"></div>
+				<p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright ©
+					2016 - 2017 Lirenmi Designed by Lirenmi</p>
 			</div>
-			<div class="ui inverted section divider"></div>
-			<p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright ©
-				2016 - 2017 Lirenmi Designed by Lirenmi</p>
-		</div>
-	</footer>
-	<!--/*/<th:block th:replace="_fragments :: script">/*/-->
-	<script
-		src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
-	<script
-		src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
-	<!--/*/</th:block>/*/-->
-	<script>
-		$('.menu.toggle').click(function() {
-			$('.m-item').toggleClass('m-mobile-hide');
-		});
-	</script>
+		</footer>
+		<!--/*/<th:block th:replace="_fragments :: script">/*/-->
+		<script
+			src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
+		<script
+			src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
+		<!--/*/</th:block>/*/-->
+		<script>
+			$('.menu.toggle').click(function() {
+				$('.m-item').toggleClass('m-mobile-hide');
+			});
+		</script>
 </body>
 </html>
 
