--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -48,197 +48,84 @@
 					</div>
 					<div class="right aligned column">
 						共
-						<h2 class="ui orange header m-inline-block m-text-thin">14</h2>
+						<h2 class="ui orange header m-inline-block m-text-thin" th:text="${#arrays.length(tags)}">14</h2>
 						个
 					</div>
 				</div>
 			</div>
 
 			<div class="ui attached segment m-padding-tb-large">
-				<a href="#"
-					class="ui teal basic left pointing large label m-margin-tb-tiny"
-					target="_blank">方法论
-					<div class="detail">13</div>
-				</a> <a href="#"
+				<a href="#" th:href="@{/tags/{id}(id=${tag.id})}"
 					class="ui basic left pointing large label m-margin-tb-tiny"
-					target="_blank">方法论
-					<div class="detail">13</div>
-				</a> <a href="#"
-					class="ui basic left pointing large label m-margin-tb-tiny"
-					target="_blank">方法论
-					<div class="detail">13</div>
-				</a> <a href="#"
-					class="ui basic left pointing large label m-margin-tb-tiny"
-					target="_blank">方法论
-					<div class="detail">13</div>
-				</a> <a href="#"
-					class="ui basic left pointing large label m-margin-tb-tiny"
-					target="_blank">方法论
-					<div class="detail">13</div>
-				</a> <a href="#"
-					class="ui basic left pointing large label m-margin-tb-tiny"
-					target="_blank">方法论
-					<div class="detail">13</div>
-				</a> <a href="#"
-					class="ui basic left pointing large label m-margin-tb-tiny"
-					target="_blank">方法论
-					<div class="detail">13</div>
+					th:classappend="${tag.id==activeTagId} ? 'teal'"
+					th:each="tag : ${tags}"><span th:text="${tag.name}">方法论</span>
+					<div class="detail" th:text="${#arrays.length(tag.blogs)}">13</div>
 				</a>
 			</div>
 
 			<div class="ui teal top attached segment">
-				<div
+				<div th:each="blog : ${page.content}"
 					class="ui padded vertical segment m-padding-tb-large m-mobile-lr-clear">
 					<div class="ui mobile reversed stackable grid">
 						<div class="eleven wide column">
-							<h3 class="ui header">你真的理解什么是财富自由吗？</h3>
-							<p class="m-text">正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已......</p>
+							<h3 class="ui header">
+								<a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank" class="m-black" th:text="${blog.title}">你真的理解什么是财富自由吗？</a>
+							</h3>
+							<p class="m-text" th:text="|${blog.description}......|">正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已......</p>
 							<div class="ui stackable grid">
 								<div class="row">
 									<div class="eleven wide column">
 										<div class="ui mini horizontal link list">
 											<div class="item">
 												<img src="https://unsplash.it/100/100?image=1005" alt=""
-													class="ui avatar image">
+													class="ui avatar image" th:src="@{${blog.user.avatar}}">
 												<div class="content">
-													<a href="#" class="header">厘米人</a>
+													<a href="#" class="header" th:text="${blog.user.nickname}">厘米人</a>
 												</div>
 											</div>
 											<div class="item">
-												<i class="calendar icon"></i> 2021-11-11
+												<i class="calendar icon"></i>
+												<span th:text="${#dates.format(blog.updateTime, 'yyyy-MM-dd')}">2021-11-11</span>
 											</div>
 											<div class="item">
-												<i class="eye icon"></i> 2345
+												<i class="eye icon"></i><span th:text="${blog.views}">2345</span>
 											</div>
 										</div>
 									</div>
 									<div class="right aligned five wide column">
-										<a href="#" target="_blank"
+										<a href="#" target="_blank" th:text="${blog.type.name}"
 											class="ui teal basic label m-padding-tiny m-text-thin">认知升级</a>
 									</div>
 								</div>
 								<div class="row">
 									<div class="column">
-										<a
-											class="ui basic teal left pointing label m-padding-mini m-text-thin">方法论</a>
+										<a th:href="@{/tags/{id}(id=${tag.id})}"
+											class="ui basic left pointing label m-padding-mini m-text-thin" 
+											th:classappend="${tag.id==activeTagId} ? 'teal'"
+											th:each="tag:${blog.tag}" th:text="${tag.name}">方法论</a>
 									</div>
 								</div>
 							</div>
 						</div>
 
 						<div class="five wide column">
-							<a href="#" target="_blank"> <img
-								src="https://unsplash.it/800/450?image=1005" alt=""
-								class="ui rounded image">
-							</a>
-						</div>
-					</div>
-				</div>
-
-				<div
-					class="ui padded vertical segment m-padding-tb-large m-mobile-lr-clear">
-					<div class="ui mobile reversed stackable grid">
-						<div class="eleven wide column">
-							<h3 class="ui header">你真的理解什么是财富自由吗？</h3>
-							<p class="m-text">正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已......</p>
-							<div class="ui stackable grid">
-								<div class="row">
-									<div class="eleven wide column">
-										<div class="ui mini horizontal link list">
-											<div class="item">
-												<img src="https://unsplash.it/100/100?image=1005" alt=""
-													class="ui avatar image">
-												<div class="content">
-													<a href="#" class="header">厘米人</a>
-												</div>
-											</div>
-											<div class="item">
-												<i class="calendar icon"></i> 2021-11-11
-											</div>
-											<div class="item">
-												<i class="eye icon"></i> 2345
-											</div>
-										</div>
-									</div>
-									<div class="right aligned five wide column">
-										<a href="#" target="_blank"
-											class="ui teal basic label m-padding-tiny m-text-thin">认知升级</a>
-									</div>
-								</div>
-								<div class="row">
-									<div class="column">
-										<a
-											class="ui basic teal left pointing label m-padding-mini m-text-thin">方法论</a>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="five wide column">
-							<a href="#" target="_blank"> <img
-								src="https://unsplash.it/800/450?image=1005" alt=""
-								class="ui rounded image">
-							</a>
-						</div>
-					</div>
-				</div>
-
-				<div
-					class="ui padded vertical segment m-padding-tb-large m-mobile-lr-clear">
-					<div class="ui mobile reversed stackable grid">
-						<div class="eleven wide column">
-							<h3 class="ui header">你真的理解什么是财富自由吗？</h3>
-							<p class="m-text">正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已......</p>
-							<div class="ui stackable grid">
-								<div class="row">
-									<div class="eleven wide column">
-										<div class="ui mini horizontal link list">
-											<div class="item">
-												<img src="https://unsplash.it/100/100?image=1005" alt=""
-													class="ui avatar image">
-												<div class="content">
-													<a href="#" class="header">厘米人</a>
-												</div>
-											</div>
-											<div class="item">
-												<i class="calendar icon"></i> 2021-11-11
-											</div>
-											<div class="item">
-												<i class="eye icon"></i> 2345
-											</div>
-										</div>
-									</div>
-									<div class="right aligned five wide column">
-										<a href="#" target="_blank"
-											class="ui teal basic label m-padding-tiny m-text-thin">认知升级</a>
-									</div>
-								</div>
-								<div class="row">
-									<div class="column">
-										<a
-											class="ui basic teal left pointing label m-padding-mini m-text-thin">方法论</a>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="five wide column">
-							<a href="#" target="_blank"> <img
-								src="https://unsplash.it/800/450?image=1005" alt=""
-								class="ui rounded image">
+							<a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank">
+								<img th:src="@{${blog.firstPicture}}"
+									src="https://unsplash.it/800/450?image=1005" alt=""
+									class="ui rounded image">
 							</a>
 						</div>
 					</div>
 				</div>
 
 				<!-- footer -->
-				<div class="ui bottom attached segment">
+				<div class="ui bottom attached segment" th:if="${page.totalPages}>1">
 					<div class="ui middle two column grid">
 						<div class="column">
-							<a href="#" class="ui mini teal basic button">上一页</a>
+							<a href="#" class="ui mini teal basic button" th:href="@{/(page=${page.number-1})}" th:unless="${page.first}">上一页</a>
 						</div>
 						<div class="right aligned column">
-							<a href="#" class="ui mini teal basic button">下一页</a>
+							<a href="#" class="ui mini teal basic button" th:href="@{/(page=${page.number+1})}" th:unless="${page.last}">下一页</a>
 						</div>
 					</div>
 				</div>
