--- a/src/main/resources/templates/archives.html
+++ b/src/main/resources/templates/archives.html
@@ -51,87 +51,25 @@
 					</div>
 					<div class="right aligned column">
 						共
-						<h2 class="ui orange header m-inline-block m-text-thin">124</h2>
+						<h2 class="ui orange header m-inline-block m-text-thin" th:text="${blogCount}">124</h2>
 						篇博客
 					</div>
 				</div>
 			</div>
 
-			<h3 class="ui center aligned header">2021</h3>
-			<div class="ui fluid vertical menu">
-				<a href="#" target="_blank" class="item">
-					<span>
-						<i class="teal circle icon"></i>关于可以练习的清单
-						<div class="ui teal basic left pointing label m-padding-mini">9月03</div>
-					</span>
-					<div class="ui orange basic left pointing label m-padding-mini">原创</div>
-				</a>
-				<a href="#" target="_blank" class="item">
-					<span>
-						<i class="teal circle icon"></i>关于可以练习的清单
-						<div class="ui teal basic left pointing label m-padding-mini">9月03</div>
-					</span>
-					<div class="ui orange basic left pointing label m-padding-mini">原创</div>
-				</a>
-				<a href="#" target="_blank" class="item">
-					<span>
-						<i class="teal circle icon"></i>关于可以练习的清单
-						<div class="ui teal basic left pointing label m-padding-mini">9月03</div>
-					</span>
-					<div class="ui orange basic left pointing label m-padding-mini">原创</div>
-				</a>
-			</div>
+			<th:block th:each="item:${archiveMap}">
+				<h3 class="ui center aligned header" th:text="${item.key}">2021</h3>
+				<div class="ui fluid vertical menu">
+					<a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank" class="item" th:each="blog : ${item.value}">
+						<span>
+							<i class="teal circle icon"></i><span th:text="${blog.title}">关于可以练习的清单</span>
+							<div class="ui teal basic left pointing label m-padding-mini" th:text="${dates.format(blog,updateTime, 'MMMdd')}">9月03</div>
+						</span>
+						<div class="ui orange basic left pointing label m-padding-mini" th:text="${blog.flag}">原创</div>
+					</a>
+				</div>
+			</th:block>
 			
-			
-			<h3 class="ui center aligned header">2020</h3>
-			<div class="ui fluid vertical menu">
-				<a href="#" target="_blank" class="item">
-					<span>
-						<i class="teal circle icon"></i>关于可以练习的清单
-						<div class="ui teal basic left pointing label m-padding-mini">9月03</div>
-					</span>
-					<div class="ui orange basic left pointing label m-padding-mini">原创</div>
-				</a>
-				<a href="#" target="_blank" class="item">
-					<span>
-						<i class="teal circle icon"></i>关于可以练习的清单
-						<div class="ui teal basic left pointing label m-padding-mini">9月03</div>
-					</span>
-					<div class="ui orange basic left pointing label m-padding-mini">原创</div>
-				</a>
-				<a href="#" target="_blank" class="item">
-					<span>
-						<i class="teal circle icon"></i>关于可以练习的清单
-						<div class="ui teal basic left pointing label m-padding-mini">9月03</div>
-					</span>
-					<div class="ui orange basic left pointing label m-padding-mini">原创</div>
-				</a>
-			</div>
-			
-			<h3 class="ui center aligned header">2019</h3>
-			<div class="ui fluid vertical menu">
-				<a href="#" target="_blank" class="item">
-					<span>
-						<i class="teal circle icon"></i>关于可以练习的清单
-						<div class="ui teal basic left pointing label m-padding-mini">9月03</div>
-					</span>
-					<div class="ui orange basic left pointing label m-padding-mini">原创</div>
-				</a>
-				<a href="#" target="_blank" class="item">
-					<span>
-						<i class="teal circle icon"></i>关于可以练习的清单
-						<div class="ui teal basic left pointing label m-padding-mini">9月03</div>
-					</span>
-					<div class="ui orange basic left pointing label m-padding-mini">原创</div>
-				</a>
-				<a href="#" target="_blank" class="item">
-					<span>
-						<i class="teal circle icon"></i>关于可以练习的清单
-						<div class="ui teal basic left pointing label m-padding-mini">9月03</div>
-					</span>
-					<div class="ui orange basic left pointing label m-padding-mini">原创</div>
-				</a>
-			</div>
 		</div>
 	</div>
 
